Rename models Change limits type to int
