# pkg/server/types.go
@@ -13,23 +13,23 @@ import (
 
 // SolutionsService is an interface for server "business logic"
 type SolutionsService interface {
-	AddTemplate(ctx context.Context, solution kube_types.AvailableSolution) error
-	UpdateTemplate(ctx context.Context, solution kube_types.AvailableSolution) error
-	GetTemplatesList(ctx context.Context, isAdmin bool) (*kube_types.AvailableSolutionsList, error)
+	AddTemplate(ctx context.Context, solution kube_types.SolutionTemplate) error
+	UpdateTemplate(ctx context.Context, solution kube_types.SolutionTemplate) error
+	GetTemplatesList(ctx context.Context, isAdmin bool) (*kube_types.SolutionsTemplatesList, error)
 	GetTemplatesEnvList(ctx context.Context, name, branch string) (*kube_types.SolutionEnv, error)
 	GetTemplatesResourcesList(ctx context.Context, name, branch string) (*kube_types.SolutionResources, error)
 	ActivateTemplate(ctx context.Context, solution string) error
 	DeactivateTemplate(ctx context.Context, solution string) error
-	ValidateTemplate(ctx context.Context, solution kube_types.AvailableSolution) error
+	ValidateTemplate(ctx context.Context, solution kube_types.SolutionTemplate) error
 
-	GetSolutionsList(ctx context.Context, isAdmin bool) (*kube_types.UserSolutionsList, error)
-	GetNamespaceSolutionsList(ctx context.Context, namespace string, isAdmin bool) (*kube_types.UserSolutionsList, error)
-	GetSolution(ctx context.Context, namespace, solutionName string, isAdmin bool) (*kube_types.UserSolution, error)
+	GetSolutionsList(ctx context.Context, isAdmin bool) (*kube_types.SolutionsList, error)
+	GetNamespaceSolutionsList(ctx context.Context, namespace string, isAdmin bool) (*kube_types.SolutionsList, error)
+	GetSolution(ctx context.Context, namespace, solutionName string, isAdmin bool) (*kube_types.Solution, error)
 	GetSolutionDeployments(ctx context.Context, namespace, solutionName string) (*kube_types.DeploymentsList, error)
 	GetSolutionServices(ctx context.Context, namespace, solutionName string) (*kube_types.ServicesList, error)
-	RunSolution(ctx context.Context, solutionReq kube_types.UserSolution) (*kube_types.RunSolutionResponse, error)
+	RunSolution(ctx context.Context, solutionReq kube_types.Solution) (*kube_types.RunSolutionResponse, error)
 	DeleteSolution(ctx context.Context, namespace, solution string) error
-	DeleteUserSolutions(ctx context.Context) error
+	DeleteSolutions(ctx context.Context) error
 	DeleteNamespaceSolutions(ctx context.Context, namespace string) error
 	io.Closer
 }
