# swagger.json
@@ -48,7 +48,7 @@
           "200": {
             "description": "running namespace solutions list",
             "schema": {
-              "$ref": "#/definitions/UserSolutionsList"
+              "$ref": "#/definitions/SolutionsList"
             }
           },
           "default": {
@@ -94,7 +94,7 @@
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/UserSolution"
+              "$ref": "#/definitions/Solution"
             }
           }
         ],
@@ -201,7 +201,7 @@
           "200": {
             "description": "running solution",
             "schema": {
-              "$ref": "#/definitions/UserSolutionsList"
+              "$ref": "#/definitions/SolutionsList"
             }
           },
           "default": {
@@ -404,7 +404,7 @@
           "200": {
             "description": "running solutions list",
             "schema": {
-              "$ref": "#/definitions/UserSolutionsList"
+              "$ref": "#/definitions/SolutionsList"
             }
           },
           "default": {
@@ -421,7 +421,7 @@
           "Solutions"
         ],
         "summary": "Delete user solution.",
-        "operationId": "DeleteUserSolutions",
+        "operationId": "DeleteSolutions",
         "parameters": [
           {
             "enum": [
@@ -485,7 +485,7 @@
           "200": {
             "description": "available solutions",
             "schema": {
-              "$ref": "#/definitions/AvailableSolutionsList"
+              "$ref": "#/definitions/SolutionsTemplatesList"
             }
           },
           "default": {
@@ -525,7 +525,7 @@
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/AvailableSolution"
+              "$ref": "#/definitions/SolutionTemplate"
             }
           }
         ],
@@ -543,7 +543,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/templates/{solution}": {
+    "/templates/{template}": {
       "put": {
         "tags": [
           "Templates"
@@ -570,7 +570,7 @@
           },
           {
             "type": "string",
-            "name": "solution",
+            "name": "template",
             "in": "path",
             "required": true
           },
@@ -578,7 +578,7 @@
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/AvailableSolution"
+              "$ref": "#/definitions/SolutionTemplate"
             }
           }
         ],
@@ -596,7 +596,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/templates/{solution}/activate": {
+    "/templates/{template}/activate": {
       "post": {
         "tags": [
           "Templates"
@@ -623,7 +623,7 @@
           },
           {
             "type": "string",
-            "name": "solution",
+            "name": "template",
             "in": "path",
             "required": true
           }
@@ -642,7 +642,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/templates/{solution}/deactivate": {
+    "/templates/{template}/deactivate": {
       "post": {
         "tags": [
           "Templates"
@@ -669,7 +669,7 @@
           },
           {
             "type": "string",
-            "name": "solution",
+            "name": "template",
             "in": "path",
             "required": true
           }
@@ -688,7 +688,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/templates/{solution}/env": {
+    "/templates/{template}/env": {
       "get": {
         "tags": [
           "Templates"
@@ -715,7 +715,7 @@
           },
           {
             "type": "string",
-            "name": "solution",
+            "name": "template",
             "in": "path",
             "required": true
           }
@@ -737,7 +737,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/templates/{solution}/resources": {
+    "/templates/{template}/resources": {
       "get": {
         "tags": [
           "Templates"
@@ -764,7 +764,7 @@
           },
           {
             "type": "string",
-            "name": "solution",
+            "name": "template",
             "in": "path",
             "required": true
           }
@@ -790,53 +790,6 @@
   "definitions": {
     "AccessLevel": {
       "type": "string",
-      "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
-    },
-    "AvailableSolution": {
-      "description": "AvailableSolution -- solution which user can run",
-      "type": "object",
-      "properties": {
-        "active": {
-          "type": "boolean",
-          "x-go-name": "Active"
-        },
-        "id": {
-          "type": "string",
-          "x-go-name": "ID"
-        },
-        "images": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "x-go-name": "Images"
-        },
-        "limits": {
-          "$ref": "#/definitions/SolutionLimits"
-        },
-        "name": {
-          "type": "string",
-          "x-go-name": "Name"
-        },
-        "url": {
-          "type": "string",
-          "x-go-name": "URL"
-        }
-      },
-      "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
-    },
-    "AvailableSolutionsList": {
-      "description": "AvailableSolutionsList -- list of available solutions",
-      "type": "object",
-      "properties": {
-        "solutions": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/AvailableSolution"
-          },
-          "x-go-name": "Solutions"
-        }
-      },
       "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
     },
     "ConfigFile": {
@@ -877,6 +830,10 @@
         "name": {
           "type": "string",
           "x-go-name": "Name"
+        },
+        "namespace": {
+          "type": "string",
+          "x-go-name": "Namespace"
         },
         "owner": {
           "type": "string",
@@ -1059,6 +1016,13 @@
           "description": "delete date in RFC3339 format",
           "type": "string",
           "x-go-name": "DeletedAt"
+        },
+        "image_pull_secret": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "ImagePullSecrets"
         },
         "name": {
           "type": "string",
@@ -1270,6 +1234,10 @@
           "type": "string",
           "x-go-name": "Name"
         },
+        "namespace": {
+          "type": "string",
+          "x-go-name": "Namespace"
+        },
         "owner": {
           "type": "string",
           "x-go-name": "Owner"
@@ -1443,11 +1411,11 @@
           "x-go-name": "Deploy"
         },
         "image_pull_secret": {
-          "type": "object",
-          "additionalProperties": {
+          "type": "array",
+          "items": {
             "type": "string"
           },
-          "x-go-name": "ImagePullSecret"
+          "x-go-name": "ImagePullSecrets"
         },
         "name": {
           "type": "string",
@@ -1799,6 +1767,49 @@
       },
       "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
     },
+    "Solution": {
+      "description": "Solution -- running solution",
+      "type": "object",
+      "required": [
+        "template",
+        "name",
+        "namespace"
+      ],
+      "properties": {
+        "branch": {
+          "type": "string",
+          "x-go-name": "Branch"
+        },
+        "env": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          },
+          "x-go-name": "Env"
+        },
+        "id": {
+          "type": "string",
+          "x-go-name": "ID"
+        },
+        "name": {
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "namespace": {
+          "type": "string",
+          "x-go-name": "Namespace"
+        },
+        "template": {
+          "type": "string",
+          "x-go-name": "Template"
+        },
+        "url": {
+          "type": "string",
+          "x-go-name": "URL"
+        }
+      },
+      "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
+    },
     "SolutionEnv": {
       "description": "SolutionEnv -- solution environment variables",
       "type": "object",
@@ -1818,11 +1829,13 @@
       "type": "object",
       "properties": {
         "cpu": {
-          "type": "string",
+          "type": "integer",
+          "format": "uint64",
           "x-go-name": "CPU"
         },
         "ram": {
-          "type": "string",
+          "type": "integer",
+          "format": "uint64",
           "x-go-name": "RAM"
         }
       },
@@ -1839,6 +1852,67 @@
             "format": "int64"
           },
           "x-go-name": "Resources"
+        }
+      },
+      "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
+    },
+    "SolutionTemplate": {
+      "description": "SolutionTemplate -- solution which user can run",
+      "type": "object",
+      "properties": {
+        "active": {
+          "type": "boolean",
+          "x-go-name": "Active"
+        },
+        "id": {
+          "type": "string",
+          "x-go-name": "ID"
+        },
+        "images": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "Images"
+        },
+        "limits": {
+          "$ref": "#/definitions/SolutionLimits"
+        },
+        "name": {
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "url": {
+          "type": "string",
+          "x-go-name": "URL"
+        }
+      },
+      "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
+    },
+    "SolutionsList": {
+      "description": "SolutionsList -- list of running solution",
+      "type": "object",
+      "properties": {
+        "solutions": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Solution"
+          },
+          "x-go-name": "Solutions"
+        }
+      },
+      "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
+    },
+    "SolutionsTemplatesList": {
+      "description": "SolutionsTemplatesList -- list of available solutions",
+      "type": "object",
+      "properties": {
+        "solutions": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/SolutionTemplate"
+          },
+          "x-go-name": "Solutions"
         }
       },
       "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
@@ -2018,63 +2092,6 @@
           "description": "user-visible label for the object",
           "type": "string",
           "x-go-name": "Label"
-        }
-      },
-      "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
-    },
-    "UserSolution": {
-      "description": "UserSolution -- running solution",
-      "type": "object",
-      "required": [
-        "template",
-        "name",
-        "namespace"
-      ],
-      "properties": {
-        "branch": {
-          "type": "string",
-          "x-go-name": "Branch"
-        },
-        "env": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          },
-          "x-go-name": "Env"
-        },
-        "id": {
-          "type": "string",
-          "x-go-name": "ID"
-        },
-        "name": {
-          "type": "string",
-          "x-go-name": "Name"
-        },
-        "namespace": {
-          "type": "string",
-          "x-go-name": "Namespace"
-        },
-        "template": {
-          "type": "string",
-          "x-go-name": "Template"
-        },
-        "url": {
-          "type": "string",
-          "x-go-name": "URL"
-        }
-      },
-      "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
-    },
-    "UserSolutionsList": {
-      "description": "UserSolutionsList -- list of running solution",
-      "type": "object",
-      "properties": {
-        "solutions": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/UserSolution"
-          },
-          "x-go-name": "Solutions"
         }
       },
       "x-go-package": "git.containerum.net/ch/solutions/vendor/github.com/containerum/kube-client/pkg/model"
